--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"@astrojs/rss": "4.0.1",
+		"@panzoom/panzoom": "^4.6.1",
 		"astro": "4.0.8",
 		"astro-font": "^0.0.72"
 	},
